--- a/NjamBa/appsettings.json
+++ b/NjamBa/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "db1": "Server=localhost;Database=NjamBa;Integrated Security = true"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
